# sidequest

./: .gitignore  Cargo.toml  README.md
assets/: boss.glb  boss2.glb  boss3.glb
assets/patterned_cobblestone_1k.gltf/: patterned_cobblestone_1k.gltf
src/: lib.rs  main.rs
src/components/: animations.rs  boss.rs  camera.rs  light.rs  mod.rs  platform.rs  player.rs  skybox.rs
src/events/: mod.rs
src/plugins/: audio.rs  auth.rs  camera.rs  character_selection.rs  core.rs  debug.rs  input.rs  mod.rs  physics.rs  player.rs  rendering.rs
src/resources/: mod.rs
src/states/: mod.rs
src/systems/: boss.rs  camera.rs  lighting.rs  mod.rs  player.rs  setup.rs  skybox.rs
