[package]
name = "sidequest"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12", features = ["jpeg", "png"] }
bevy_rapier3d = "0.23.0" # Adding physics engine
bevy_mod_rounded_box = "0.6" # For rounded rectangular platforms

# Authentication and networking
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
bcrypt = "0.15"

# UI components
bevy_egui = "0.24"
